# Cbit2d

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  install_libraries.py  install_library.py  library.json  package.json
application/resources/maps/: basic.json
application/src/: main.cpp
application/src/scenes/: CustomScene.cpp  CustomScene.h  MenuScene.cpp  MenuScene.h  PlayScene.cpp  PlayScene.h
docs/: CHANGELOG.md  TODO.md
src/: Cbit.h
src/core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Components.h  EntityComponentSystem.cpp  EntityComponentSystem.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TileMap.cpp  TileMap.h  Type.h
src/editor/: DebugMode.cpp  DebugMode.h  Editor.cpp  Editor.h
src/utilities/: LocalMachine.cpp  LocalMachine.h  Logger.cpp  Logger.h
